Update add-task component: fix overflow issue with scroll

--- a/src/app/components/board/add-task/add-task.component.scss
+++ b/src/app/components/board/add-task/add-task.component.scss
@@ -335,7 +335,7 @@ button {
     .upper-form {
       @include dFlex(column, flex-start, flex-start);
       width: 95%;
-      overflow: hidden;
+      overflow: scroll;
 
       .outer-input-frame {
         @include dFlex(row, space-between, flex-start);
